--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,9 @@
-Nama    : Wida Ghaib Nugroho
-NIM     : 2205101145P
-Alamat  : Brookyln
-Hobi    : Berdoa
+Nama           : Wida Ghaib Nugroho
+Nama Panggilan :
+NIM            : 2205101145P
+Alamat         : Brookyln
+Hobi           : Berdoa
+
 
 Deskripsi
 Whoosh Whoosh, Tes 1 2 3
